--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
-<h1>first angular merge with git</h1>
+<h1>Component interaction</h1>
 <!-- component interaction -->
+<!-- @input used to receive data from parent -->
 
+<!-- @output used to send data to parent -->
+
+<app-parent></app-parent>
