--- a/src/app/parent/parent.component.css
+++ b/src/app/parent/parent.component.css
@@ -1,5 +1,6 @@
-div{
-    width:250px;
-    height: 250px;
-    background-color:blue ;
+.green{
+    background-color: green;
+}
+.red{
+    background-color: red;
 }
