--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,11 @@
 <!-- this is called custom directive -->
-<h1 appTst >Component interaction</h1>
+<!-- <h1 appTst >Component interaction</h1> -->
 <!-- component interaction -->
 <!-- @input used to receive data from parent -->
 
 <!-- @output used to send data to parent -->
+
+<h1 appTst >hello shan ,how are you?</h1>
+<!-- host binding -->
+<!-- <input type="button" (click)="change_color()" value="change color"> -->
 
